--- a/style.css
+++ b/style.css
@@ -2,36 +2,38 @@
     padding: 0px;
     margin: 0px;
 }
-body{
-    background-color: #568687;
-    text-align: center;
-}
 #container{
-    height: 50vh;
-    width: 100%;
+    height: 100vh;
+    width:100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-#game{
-    height: 300px; 
-    width:20%;
+#calculator{
+    height: 60vh;
+    width: 30%; background-color: antiquewhite;
+    /* display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center; */
+}
+#btn{
+    height: 40px;
+    width: 50px;
+    margin: 8px 20px;
+}
+#screen{
+    height:20vh;
+    width: 100%; 
+    border-radius: 20px;
+    background-color:black;
+}
+#numbers{
+    height: 40vh;
+    width: 100%; background-color: aquamarine;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
-#box{
-    height: 60px;
-    width: 25%;
-    border-radius: 10px;
-    border: none;
-    box-shadow: 0 0 15px rgba(0,0,0,0.4);
-}
-#resetBtn{
-    padding: 8px 15px;
-    background-color: black;
-    color: white;
-    border: none;
+    
+    
 }
