--- a/style.css
+++ b/style.css
@@ -11,29 +11,36 @@
 }
 #calculator{
     height: 60vh;
-    width: 30%; background-color: antiquewhite;
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center; */
+    width: 30%; 
+    background-color: rgb(41, 48, 45);;
+    border-radius: 20px;
 }
 #btn{
-    height: 40px;
+    height: 45px;
     width: 50px;
     margin: 8px 20px;
+    font-weight: 600;
+    font-size: 20px;
 }
 #screen{
     height:20vh;
     width: 100%; 
-    border-radius: 20px;
+    border-radius: 20px 20px 0px 0px;
     background-color:black;
+    color: white;
+    font-size: 25px;
+    font-weight: 600;
+    display: flex;
+    justify-content:end;
+    align-items: end;
 }
 #numbers{
     height: 40vh;
-    width: 100%; background-color: aquamarine;
+    width: 100%; 
+    background-color: rgb(41, 48, 45);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    
+    border-radius:0px 0px 20px 20px;
     
 }
